# CGoL-rs

./: .gitignore  Cargo.toml  README.md
src/: backup.rs  grid_graph.rs  main.rs
