[package]
name = "cgol-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.6.6", package = "gtk4", features = ["v4_8"] }
ndarray = "0.15.6"
rayon = "1.7.0"
num = "0.4.0"
colorous = "1.0.10"
catppuccin = "1.2.1"
rand = "0.8.5"
